Fixing FindBug issues in deployment/client modules. Ran QL, deployment dev tests.
svn path=/trunk/; revision=45758


Former-commit-id: 7ec92e4d677e67deee2501bd88be0e037bbb2459