@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -325,6 +325,8 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
             remaining -= actual;
         }
         bos.flush();
+        bis.close(); 
+        bos.close();
         return tempFile;
     } 
 
@@ -358,7 +360,6 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
             po.setupForAbnormalExit(localStrings.getLocalString("enterprise.deployment.client.archive_no_read_permission", "Archive to be deployed does not have read permission."), domain);
             return po;
         }
-        boolean isDirectoryDeploy = tmpFile.isDirectory();
         try {
             if (deploymentPlan != null) {
                 File dp = new File(deploymentPlan.getSchemeSpecificPart());
@@ -526,14 +527,14 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                 commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                throw commandExecutionException;
+                throw (IOException)commandExecutionException;
             }
             return subModuleInfoList;
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
     }
@@ -576,14 +577,14 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                 commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                throw commandExecutionException;
+                throw (IOException)commandExecutionException;
             }
             return enabledAttr;
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
     }
@@ -623,14 +624,14 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                 commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                throw commandExecutionException;
+                throw (IOException)commandExecutionException;
             }
             return contextRoot;
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
     }
@@ -668,13 +669,13 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                 commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                throw commandExecutionException;
+                throw (IOException)commandExecutionException;
             }
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
     }
@@ -718,13 +719,13 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                 commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                throw commandExecutionException;
+                throw (IOException)commandExecutionException;
             }
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
     }
@@ -755,13 +756,13 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                 commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                throw commandExecutionException;
+                throw (IOException)commandExecutionException;
             }
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
     }
@@ -796,7 +797,7 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
         if (virtualServer != null) {
             commandParams.put("virtualServer", virtualServer);
         }
-        commandParams.put("securityEnabled", new Boolean(securityEnabled));
+        commandParams.put("securityEnabled", Boolean.valueOf(securityEnabled));
         DFDeploymentStatus mainStatus = null;
         Throwable commandExecutionException = null;
         try {
@@ -823,13 +824,13 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                 commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                throw commandExecutionException;
+                throw (IOException)commandExecutionException;
             }
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
     }
@@ -870,14 +871,14 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                     commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                    throw commandExecutionException;
+                    throw (IOException)commandExecutionException;
                 }
             }
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
         TargetModuleIDImpl[] result =
@@ -961,13 +962,13 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
                         "remote command execution failed on the server");
                 commandExecutionException.initCause(
                         new RuntimeException(mainStatus.getAllStageMessages()));
-                throw commandExecutionException;
+                throw (IOException)commandExecutionException;
             }
         } catch (Throwable ex) {
             if (commandExecutionException == null) {
                 throw new RuntimeException("error submitting remote command", ex);
             } else {
-                throw (IOException) ex;
+                throw (IOException)commandExecutionException;
             }
         }
     }
@@ -1102,14 +1103,6 @@ public abstract class AbstractDeploymentFacility implements DeploymentFacility, 
 
     protected ServerConnectionIdentifier getTargetDAS() {
         return targetDAS;
-    }
-
-    private String getValueFromDottedNameListResult(String result) {
-        if (result == null) {
-            return null;
-        }
-        int index = result.lastIndexOf(".");
-        return result.substring(index+1);
     }
 
     private String getValueFromDottedNameGetResult(String result) {
